--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,32 +5,16 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
 .main {
-  padding: 5rem 0;
+  padding: 2rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+  min-height: 0;
 }
 
 .title a {
@@ -74,7 +58,6 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
   margin-top: 3rem;
 }
 
@@ -108,9 +91,53 @@
   line-height: 1.5;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.tile {
+  margin: 0.2rem;
+  padding: 0.5rem;
+  border: 1px solid #eaeaea;
+  width: 30%;
+}
+
+.tile:hover {
+  border: 1px solid black;
+}
+
+.tileImg {
+  height: 100%;
+  width: 100%;
+}
+
+.productPageContainer {
+  min-height: 100vh;
+  padding: 0 0.5rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 4em;
+}
+
+.productPageInfoContainer {
+  flex-direction: row;
+  padding-left: 1em;
+}
+
+.productPageImg {
+  height: 30em;
+}
+
+.dot {
+  display: inline-block;
+  height: 2.75rem;
+  width: 2.75rem;
+  border-radius: 50%;
+  margin-right: 3px;
+  padding: 0.1rem;
+}
+
+.dot:hover {
+  border: .1875rem solid black;
 }
 
 @media (max-width: 600px) {
